--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity" >
 
-    <LinearLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="32dp"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/clientButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Client" />
-
-        <Button
-            android:id="@+id/serverButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Server" />
-    </LinearLayout>
-
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph" />
 </FrameLayout>
