--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HaxRover" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.NetworkVideoStream" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#1976d2</item>
         <item name="colorPrimaryVariant">#63a4ff</item>
